--- a/app/release/namespaces.yaml
+++ b/app/release/namespaces.yaml
@@ -1,7 +1,7 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: nodejs-gitops-qa
+  name: nodejs-gitops-release
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
