--- a/app/develop/namespaces.yaml
+++ b/app/develop/namespaces.yaml
@@ -1,7 +1,7 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: nodejs-gitops-dev
+  name: nodejs-gitops-develop
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
