--- a/app/main/namespaces.yaml
+++ b/app/main/namespaces.yaml
@@ -1,7 +1,7 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: nodejs-gitops
+  name: nodejs-gitops-main
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
