--- a/app/release/rolebindings.yaml
+++ b/app/release/rolebindings.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: default
-    namespace: nodejs-gitops-qa
+    namespace: nodejs-gitops-release
