--- a/secrets/argocd_secrets.example.yaml
+++ b/secrets/argocd_secrets.example.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: nodejs-gitops-pipeline-secrets
+  name: argocd-env-secret
 type: Opaque
 data:
-  ARGOCD_USERNAME: YWRtaW4K
   ARGOCD_PASSWORD: xyz
