refactored the namespaces

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -30,7 +30,7 @@ spec:
       recurse: true
     path: app/develop
     repoURL: https://github.com/redhat-capgemini-exchange/nodejs-gitops
-    targetRevision: develop
+    targetRevision: main
 ---
 kind: Application
 apiVersion: argoproj.io/v1alpha1
@@ -48,7 +48,7 @@ spec:
       recurse: true
     path: app/release
     repoURL: https://github.com/redhat-capgemini-exchange/nodejs-gitops
-    targetRevision: release
+    targetRevision: main
 ---
 kind: Application
 apiVersion: argoproj.io/v1alpha1
