--- a/app/pipelines.yaml
+++ b/app/pipelines.yaml
@@ -42,11 +42,21 @@ spec:
     repoURL: https://github.com/redhat-capgemini-exchange/nodejs-gitops
     targetRevision: main
 ---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: nodejs-gitops-develop
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
+spec:
+  finalizers:
+    - kubernetes
+---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: nodejs-dev-pipeline-rolebinding
-  namespace: nodejs-gitops-dev
+  namespace: nodejs-gitops-develop
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
