--- a/app/config/pipelines.yaml
+++ b/app/config/pipelines.yaml
@@ -1,3 +1,13 @@
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: nodejs-gitops-pipeline
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
+spec:
+  finalizers:
+    - kubernetes
+---
 kind: Application
 apiVersion: argoproj.io/v1alpha1
 metadata:
@@ -41,16 +51,6 @@ spec:
     path: pipelines/rollout
     repoURL: https://github.com/redhat-capgemini-exchange/nodejs-gitops
     targetRevision: main
----
-kind: Namespace
-apiVersion: v1
-metadata:
-  name: nodejs-gitops-develop
-  labels:
-    argocd.argoproj.io/managed-by: openshift-gitops
-spec:
-  finalizers:
-    - kubernetes
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
