config changes and updated rollout pipeline

--- a/secrets/argocd_configmap.example.yaml
+++ b/secrets/argocd_configmap.example.yaml
@@ -3,6 +3,5 @@ kind: ConfigMap
 metadata:
   name: argocd-env-configmap
 data:
-  ARGOCD_USERNAME: admin
-  ARGOCD_SERVER: 'https://openshift-gitops-server-openshift....opentlc.com'
+  ARGOCD_SERVER: 'openshift-gitops-server.openshift-gitops.svc.cluster.local' # the service
   
