--- a/secrets/argocd_secrets.example.yaml
+++ b/secrets/argocd_secrets.example.yaml
@@ -3,5 +3,6 @@ kind: Secret
 metadata:
   name: argocd-env-secret
 type: Opaque
-data:
+stringData:
+  ARGOCD_USERNAME: admin
   ARGOCD_PASSWORD: xyz
