--- a/app/release/app.yaml
+++ b/app/release/app.yaml
@@ -2,7 +2,7 @@ kind: DeploymentConfig
 apiVersion: apps.openshift.io/v1
 metadata:
   annotations:
-    description: Defines how to deploy the application server
+    description: Defines how to deploy the app
   name: nodejs-gitops
   labels:
     app: nodejs-gitops
