--- a/pipelines/rollout/trigger_template.yaml
+++ b/pipelines/rollout/trigger_template.yaml
@@ -31,8 +31,8 @@ spec:
           name: rollout-pipeline
 
         resources: []
-        workspaces:
-          - name: rollout
-            persistentVolumeClaim:
-              claimName: rollout-workspace
+        #workspaces:
+        #  - name: rollout
+        #    persistentVolumeClaim:
+        #      claimName: rollout-workspace
           
