--- a/app/config/namespaces.yaml
+++ b/app/config/namespaces.yaml
@@ -11,7 +11,7 @@ spec:
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: nodejs-gitops-develop
+  name: nodejs-rest-develop
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
@@ -21,7 +21,7 @@ spec:
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: nodejs-gitops-release
+  name: nodejs-rest-release
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
@@ -31,7 +31,7 @@ spec:
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: nodejs-gitops-main
+  name: nodejs-rest-main
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
 spec:
