--- a/secrets/app_secrets.example.yaml
+++ b/secrets/app_secrets.example.yaml
@@ -1,9 +1,9 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: nodejs-gitops-secrets
+  name: nodejs-rest-secrets
   labels:
-    app: nodejs-gitops
+    app: nodejs-rest
 stringData:
   database-admin-password: Zn==
   database-password: cEQ==
