--- a/app/release/rolebindings.yaml
+++ b/app/release/rolebindings.yaml
@@ -1,8 +1,8 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: nodejs-qa-image-puller-rolebinding
-  namespace: nodejs-gitops-pipeline
+  name: nodejs-release-image-puller-rolebinding
+  namespace: nodejs-rest-develop
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: default
-    namespace: nodejs-gitops-release
+    namespace: nodejs-rest-release
