changed imagestream names

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -17,7 +17,7 @@ status: {}
 kind: Application
 apiVersion: argoproj.io/v1alpha1
 metadata:
-  name: nodejs-gitops-config
+  name: nodejs-rest-config
   namespace: openshift-gitops
 spec:
   project: default-app-project
